# lets-write-a-scripting-language

./: Cargo.toml
src/: main.rs
src/core/: lexer.rs  parser.rs  tokens.rs
src/tests/: lexer.rs  parser.rs
