[package]
name = "vvz-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["phf_macros", "macros"] }

[dev-dependencies]
test-case = "3.1.0"
indoc = "2.0.1"
